--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -37,7 +37,6 @@
     />
   </head>
   <body>
-    <!-- Header -->
     <header>
       <div class="logo-container">
         <img src="images/logo.png" alt="Timbuktu Chamber of Commerce Logo" />
@@ -61,57 +60,7 @@
     </header>
 
     <main>
-      <!-- Hero Section -->
-      <section class="hero">
-        <img
-          src="./images/Timbuktu-slider-image.jpg"
-          alt="hero-image"
-        /><button>Keynote Tickets</button>
-      </section>
-
-      <!-- Contents -->
-      <section>
-        <h1>Home</h1>
-        <div class="contents">
-          <!-- Events -->
-          <div class="content events">
-            <h2>Events</h2>
-          </div>
-
-          <!-- Current Weather -->
-          <div class="content weather">
-            <h2>Current Weather</h2>
-            <p>
-              The current temperature in Timbuktu is
-              <span id="current-temp"></span>
-            </p>
-            <figure>
-              <img id="weather-icon" src="" alt="" />
-              <figcaption></figcaption>
-            </figure>
-          </div>
-
-          <!-- Weather Forecast -->
-          <div class="content forecast">
-            <h2>Weather Forecast</h2>
-            <div id="forecast-container"></div>
-          </div>
-        </div>
-      </section>
-
-      <!-- Business Cards -->
-      <section>
-        <!-- Buttons -->
-        <div class="menu">
-          <button id="grid">⏹️Grid</button>
-          <button id="list">📄List</button>
-        </div>
-
-        <!-- Cards -->
-        <article class="grid">
-          <div class="business-cards" id="business-cards"></div>
-        </article>
-      </section>
+      <h1>Discover Page</h1>
     </main>
 
     <!-- Footer -->
@@ -146,8 +95,5 @@
     </footer>
 
     <!-- script -->
-    <script src="scripts/script.js" defer></script>
-    <script src="scripts/businessCard.js" defer></script>
-    <script src="scripts/weather.js" defer></script>
   </body>
 </html>
