--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Timbuktu Chamber of Commerce Directory - Sehee Jang</title>
     <meta
@@ -18,10 +18,7 @@
     <link rel="stylesheet" href="./styles/normalize.css" />
 
     <!-- meta tags for Facebook-->
-    <meta
-      property="og:title"
-      content="Timbuktu Chamber of Commerce - Community & Business"
-    />
+    <meta property="og:title" content="Timbuktu Chamber of Commerce - Community & Business"/>
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
@@ -53,8 +50,8 @@
         <div class="nav-links">
           <a href="./index.html">Home</a>
           <a href="./directory.html">Directory</a>
-          <a href="#">Join</a>
-          <a href="#">Discover</a>
+          <a href="./join.html">Join</a>
+          <a href="./discover.html">Discover</a>
         </div>
       </nav>
     </header>
@@ -107,7 +104,11 @@
               <span id="current-temp"></span>
             </p>
             <figure>
-              <img id="weather-icon" alt="Weather icon" />
+              <img
+                src="https://openweathermap.org"
+                id="weather-icon"
+                alt="Weather icon"
+              />
               <figcaption></figcaption>
             </figure>
           </div>
