--- a/chamber/join.html
+++ b/chamber/join.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Timbuktu Chamber of Commerce Directory - Sehee Jang</title>
     <meta
@@ -22,7 +22,7 @@
       property="og:title"
       content="Timbuktu Chamber of Commerce - Community & Business"
     />
-    <meta property="og:type" content="website" />
+    <meta property="og:type" content="website">
     <meta
       property="og:url"
       content="https://sehee-jang.github.io/wdd231/chamber/directory.html"
@@ -125,6 +125,9 @@
 
         <label for="membership-level">Membership Level:</label>
         <select id="membership-level" name="membership-level" required>
+          <option value="" disabled selected>
+            Select your membership level
+          </option>
           <option value="np">NP Membership</option>
           <option value="bronze">Bronze Membership</option>
           <option value="silver">Silver Membership</option>
