--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -96,6 +96,21 @@
         params.get("business-name");
       document.getElementById("timestamp").textContent =
         params.get("timestamp");
+
+      // Time Stamp
+      const now = new Date();
+      const options = {
+        year: "numeric",
+        month: "2-digit",
+        day: "2-digit",
+        hour: "2-digit",
+        minute: "2-digit",
+        second: "2-digit",
+        timeZone: "Asia/Seoul",
+      };
+      const formattedDate = now.toLocaleString("ko-KR", options);
+
+      document.getElementById("timestamp").textContent = formattedDate;
     </script>
   </body>
 </html>
