fix: changed formattedDate language

--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Timbuktu Chamber of Commerce Directory - Sehee Jang</title>
     <meta
@@ -22,7 +22,7 @@
       property="og:title"
       content="Timbuktu Chamber of Commerce - Community & Business"
     />
-    <meta property="og:type" content="website">
+    <meta property="og:type" content="website" />
     <meta
       property="og:url"
       content="https://sehee-jang.github.io/wdd231/chamber/directory.html"
@@ -108,7 +108,7 @@
         second: "2-digit",
         timeZone: "Asia/Seoul",
       };
-      const formattedDate = now.toLocaleString("ko-KR", options);
+      const formattedDate = now.toLocaleString("en-US", options);
 
       document.getElementById("timestamp").textContent = formattedDate;
     </script>
