add: h1 tag in the body tag

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -19,7 +19,8 @@
 
     <!-- meta tags for Facebook-->
     <meta
-      property="og:title" content="Timbuktu Chamber of Commerce - Community & Business"
+      property="og:title"
+      content="Timbuktu Chamber of Commerce - Community & Business"
     />
     <meta property="og:type" content="website">
     <meta
@@ -122,30 +123,54 @@
       </aside>
 
       <section class="gallery">
-        <h2>Gallery</h2>
+        <h1>Discover</h1>
         <div class="image-grid">
           <figure>
-            <img src="images/gallery-image1.jpg" alt="Scenic park view" loading="lazy" />
+            <img
+              src="images/gallery-image1.jpg"
+              alt="Scenic park view"
+              loading="lazy"
+            />
             <figcaption>Scenic Park View</figcaption>
           </figure>
           <figure>
-            <img src="images/gallery-image2.jpg" alt="Historic downtown" loading="lazy" />
+            <img
+              src="images/gallery-image2.jpg"
+              alt="Historic downtown"
+              loading="lazy"
+            />
             <figcaption>Historic Downtown</figcaption>
           </figure>
           <figure>
-            <img src="images/gallery-image3.jpg" alt="Local museum exhibit" loading="lazy" />
+            <img
+              src="images/gallery-image3.jpg"
+              alt="Local museum exhibit"
+              loading="lazy"
+            />
             <figcaption>Local Museum Exhibit</figcaption>
           </figure>
           <figure>
-            <img src="images/gallery-image4.jpg" alt="Cultural festival" loading="lazy" />
+            <img
+              src="images/gallery-image4.jpg"
+              alt="Cultural festival"
+              loading="lazy"
+            />
             <figcaption>Cultural Festival</figcaption>
           </figure>
           <figure>
-            <img src="images/gallery-image5.jpg" alt="Night market" loading="lazy" />
+            <img
+              src="images/gallery-image5.jpg"
+              alt="Night market"
+              loading="lazy"
+            />
             <figcaption>Night Market</figcaption>
           </figure>
           <figure>
-            <img src="images/gallery-image6.jpg" alt="Mountain trail" loading="lazy" />
+            <img
+              src="images/gallery-image6.jpg"
+              alt="Mountain trail"
+              loading="lazy"
+            />
             <figcaption>Mountain Trail</figcaption>
           </figure>
         </div>
