--- a/chamber/join.html
+++ b/chamber/join.html
@@ -60,7 +60,7 @@
     </header>
 
     <main>
-      <h1>Join the Chamber</h1>
+      <h1 style="text-align: center;">Join the Chamber</h1>
       <form action="thankyou.html" method="get">
         <label for="first-name">First Name:</label>
         <input
@@ -176,10 +176,6 @@
       </div>
     </main>
 
-    <footer>
-      <p>&copy; 2024 Chamber of Commerce. All rights reserved.</p>
-    </footer>
-
     <!-- Modals for Membership Benefits -->
     <div id="npModal" class="modal">
       <div class="modal-content">
@@ -209,6 +205,37 @@
         <p>Details about Gold membership benefits.</p>
       </div>
     </div>
+
+    <!-- Footer -->
+    <footer>
+      <div class="business-info">
+        <p>Timbuktu Chamber of Commerce</p>
+        <p>
+          10 Rue De La Paix<br />
+          Timbuktu, Mali 999
+        </p>
+      </div>
+      <div class="social-media">
+        <a href="#" class="social-icon youtube"
+          ><img src="./images/logo-youtube.png" alt="Youtube Logo" />Youtube</a
+        >
+        <a href="#" class="social-icon twitter"
+          ><img
+            src="./images/logo-linkedin.png"
+            alt="Linkedin Logo"
+          />Twitter</a
+        >
+        <a href="#" class="social-icon indeed"
+          ><img src="./images/logo-facebook.png" alt="Indeed Logo" />Facebook</a
+        >
+      </div>
+      <div class="developer-info">
+        <p>WDD231 Class Project</p>
+        <p>Developed by Sehee Jang</p>
+        <p>©2024 Timbuktu Chamber of Commerce</p>
+        <p>Last modified: <span id="last-modified"></span></p>
+      </div>
+    </footer>
 
     <script src="./scripts/join.js"></script>
   </body>
