add: upcoming, top picks, top rated, now playing movies

--- a/cinequest/index.html
+++ b/cinequest/index.html
@@ -85,10 +85,33 @@
     </header>
 
     <main>
-       <section class="main_movie_list" id="movie-container">
+      <!-- Movie List-->
+       <!-- <section class="main_movie_list" id="movie-container">
             <ol id="cards" class="cards">
-                <!-- Movie List-->
+                
             </ol>
+        </section> -->
+
+        <section class="main_movie_list">
+          <h2>Upcoming Movies</h2>
+
+            <ol id="upcoming-movies" class="cards"></ol>
+
+        </section>
+
+        <section class="main_movie_list">
+          <h2>Top Picks</h2>
+          <ol id="popular-movies" class="cards"></ol>
+        </section>
+
+        <section class="main_movie_list">
+          <h2>Top Rated</h2>
+          <ol id="top-rated-movies" class="cards"></ol>
+        </section>
+
+        <section class="main_movie_list">
+         <h2>Now Playing</h2>
+           <ol id="now-playing-movies" class="cards"></ol>
         </section>
       </section>
     </main>
